--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Minesweeper</title><script type="module" crossorigin src="/assets/index.e2685c9f.js"></script></head><body><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Minesweeper</title><script>(function(){
+        const query = window.location.search;
+        if (query.startsWith('?p=')) {
+          const route = decodeURIComponent(query.substr(3));
+          window.history.replaceState(null, null, route);
+        }
+      })();</script><script type="module" crossorigin src="/assets/index.e2685c9f.js"></script></head><body><div id="root"></div></body></html>
